--- a/chart.html
+++ b/chart.html
@@ -3,13 +3,22 @@
 
 <head>
     <meta charset="utf-8">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script type="text/javascript" src="https://d3js.org/d3.v4.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <h3>Multi-Line-Chart</h3>
+    <h3>Multi-Line-Chart Example</h3>
+    <a href="https://github.com/zutto-oreno-turn/chart">https://github.com/zutto-oreno-turn/chart</a>
     <main></main>
+    <div>
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3155583508878616"
+            data-ad-slot="8532280963" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
     <span class="tip"></span>
     <script type="text/javascript" src="./js/chart.js"></script>
     <script>
